--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "React Node app",
   "main": "server.js",
   "scripts": {
-    "start": "server.js",
-    "test": "mocha --exit"
+    "start": "node server.js",
+    "test": "mocha --exit",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "react",
