--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "React Node app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node start.js",
     "test": "mocha --exit",
-    "dev": "nodemon server.js"
+    "dev": "nodemon start.js"
   },
   "keywords": [
     "react",
@@ -17,9 +17,20 @@
   "author": "Adriana Suarez",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "mongoose": "^5.3.14"
+    "faker": "^4.1.0",
+    "joi": "^14.3.0",
+    "jsonwebtoken": "^8.4.0",
+    "mongoose": "^5.3.14",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "save": "^2.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
